--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <a href="">WebStudio</a>
+    <header class="header">
+        <a href="" class="header__logo"><span class="header__logoweb">Web</span>Studio</a>
         <ul>
             <li>
                 <a href="">Студія</a>
             </li>
-            <li><a href="">Портфоліо</a></li>
+            <li><a href="./portfolio.html">Портфоліо</a></li>
             <li><a href="">Контакти</a></li>
         </ul>
         <a href="">info@devstudio.com</a>
@@ -82,7 +84,9 @@
         </section>
     </main>
     <footer>
-        <a href="">WebStudio</a>
+        <a href="" class="logo">
+            <span class="logotype">Web</span>
+            <span>Studio</span></a>
         <address>
             <ul>
                 <li><a href="https://goo.gl/maps/VeayQojqGneW1Sk49"  target="_blank"  rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
